--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#https://miqh9jce57b31dslnkcftnomoli3odr91huank6j9ec68f9f2110.cc-propeller.cloud/#">Downlaod Excursion (Coming Soon!)</a></p>
+      <p class="Download"><a href="#https://miqh9jce57b31dslnkcftnomoli3odr91huank6j9ec68f9f2110.cc-propeller.cloud/#">Downlaod Excursion (Coming Soon!)</a></p>
+      <p class="PhoneVideo"><video src="resources/videos/excursion.mp4" autoplay muted loop label="Save">></video></p>
+
+    <h2>Your personal travel guide</h2>
+      <p>Excursion rememers places you like, and recommends new points of interest around you</p>
+      <p class="camp"><img src="resources/images/camp.jpg" alt="desert camp site"></p>
+      <p class="phone"><img src="resources/images/phone.png" alt="cartoon smart phone icon"></p>
+
+    <h2>Coming Soon for Iphone and Android</h2>
+      <p class="Download"><a href="#https://miqh9jce57b31dslnkcftnomoli3odr91huank6j9ec68f9f2110.cc-propeller.cloud/#">Downlaod Excursion (Coming Soon!)</a></p>
+
 
   </body>
 </html>
