Added CS Styling

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../resources/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <title></title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-      <p class="Download"><a href="#https://miqh9jce57b31dslnkcftnomoli3odr91huank6j9ec68f9f2110.cc-propeller.cloud/#">Downlaod Excursion (Coming Soon!)</a></p>
+      <p class="Download"><a href="#">Downlaod Excursion (Coming Soon!)</a></p>
       <p class="PhoneVideo"><video src="resources/videos/excursion.mp4" autoplay muted loop label="Save">></video></p>
 
     <h2>Your personal travel guide</h2>
@@ -16,7 +16,7 @@
       <p class="phone"><img src="resources/images/phone.png" alt="cartoon smart phone icon"></p>
 
     <h2>Coming Soon for Iphone and Android</h2>
-      <p class="Download"><a href="#https://miqh9jce57b31dslnkcftnomoli3odr91huank6j9ec68f9f2110.cc-propeller.cloud/#">Downlaod Excursion (Coming Soon!)</a></p>
+      <p class="Download"><a href="#">Downlaod Excursion (Coming Soon!)</a></p>
 
 
   </body>
