--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h2>Coming Soon for Iphone and Android</h2>
       <p class="Download"><a href="#">Downlaod Excursion (Coming Soon!)</a></p>
 
+    <div class="footer">
+        <p>© Excursion</p>
+    </div>
+
 
   </body>
 </html>
